...
            rejectionResponse(415)
          } else {
            WebResourceResponse(
              parsedContentType.mimeType,
              parsedContentType.charset,
              200,
              "OK",
              response.headers,
              ByteArrayInputStream(response.bytes)
            )
          }
        }
      }
...
